@@ -5,6 +5,7 @@ brz-debian (2.8.9) UNRELEASED; urgency=medium
   * Only apply/unapply quilt patches on '3.0 (quilt)' format source
     packages. LP: #999586
   * Remove deprecated --result option for 'bzr builddeb'.
+  * Remove deprecated export-upstream setting in configuation.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 17 Jun 2017 14:10:48 +0000
 
